Fix overflow/sticky issues on projects

--- a/public/style.css
+++ b/public/style.css
@@ -7444,6 +7444,15 @@ video {
 .grid-3 {
   grid-template-columns: 1fr 1fr 1fr;
 }
+.grid-1p {
+  grid-template-columns: 100%;
+}
+.grid-2p {
+  grid-template-columns: 50% 50%;
+}
+.grid-3p {
+  grid-template-columns: 33.333% 33.333% 33.334%;
+}
 .grid-wrap {
   grid-template-columns: repeat(auto-fit, minmax(var(--grid-item-min), 1fr));
 }
@@ -7632,6 +7641,15 @@ video {
   .grid-3-ns {
     grid-template-columns: 1fr 1fr 1fr;
   }
+  .grid-1p-ns {
+    grid-template-columns: 100%;
+  }
+  .grid-2p-ns {
+    grid-template-columns: 50% 50%;
+  }
+  .grid-3p-ns {
+    grid-template-columns: 33.333% 33.333% 33.334%;
+  }
 }
 @media screen and (min-width: 35em) and (max-width: 60em) {
   .bg1-m {
@@ -7685,6 +7703,15 @@ video {
   .grid-3-m {
     grid-template-columns: 1fr 1fr 1fr;
   }
+  .grid-1p-m {
+    grid-template-columns: 100%;
+  }
+  .grid-2p-m {
+    grid-template-columns: 50% 50%;
+  }
+  .grid-3p-m {
+    grid-template-columns: 33.333% 33.333% 33.334%;
+  }
 }
 @media screen and (min-width: 60em) {
   .bg1-l {
@@ -7737,6 +7764,15 @@ video {
   }
   .grid-3-l {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+  .grid-1p-l {
+    grid-template-columns: 100%;
+  }
+  .grid-2p-l {
+    grid-template-columns: 50% 50%;
+  }
+  .grid-3p-l {
+    grid-template-columns: 33.333% 33.333% 33.334%;
   }
 }
 .b--theme-dark {
