--- a/src/rawdata/css/core.css
+++ b/src/rawdata/css/core.css
@@ -275,6 +275,18 @@ video {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+.grid-1p {
+    grid-template-columns: 100%;
+}
+
+.grid-2p {
+    grid-template-columns: 50% 50%;
+}
+
+.grid-3p {
+    grid-template-columns: 33.333% 33.333% 33.334%;
+}
+
 .grid-wrap {
     grid-template-columns: repeat(auto-fit, minmax(var(--grid-item-min), 1fr));
 }
@@ -526,6 +538,18 @@ on our SVGs to ensure that they naturally render at the right size.)
     .grid-3-ns {
         grid-template-columns: 1fr 1fr 1fr;
     }
+
+    .grid-1p-ns {
+        grid-template-columns: 100%;
+    }
+
+    .grid-2p-ns {
+        grid-template-columns: 50% 50%;
+    }
+
+    .grid-3p-ns {
+        grid-template-columns: 33.333% 33.333% 33.334%;
+    }
 }
 
 @media screen and (min-width: 35em) and (max-width: 60em) {
@@ -596,6 +620,18 @@ on our SVGs to ensure that they naturally render at the right size.)
     .grid-3-m {
         grid-template-columns: 1fr 1fr 1fr;
     }
+
+    .grid-1p-m {
+        grid-template-columns: 100%;
+    }
+
+    .grid-2p-m {
+        grid-template-columns: 50% 50%;
+    }
+
+    .grid-3p-m {
+        grid-template-columns: 33.333% 33.333% 33.334%;
+    }
 }
 
 @media screen and (min-width: 60em) {
@@ -665,6 +701,18 @@ on our SVGs to ensure that they naturally render at the right size.)
 
     .grid-3-l {
         grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .grid-1p-l {
+        grid-template-columns: 100%;
+    }
+
+    .grid-2p-l {
+        grid-template-columns: 50% 50%;
+    }
+
+    .grid-3p-l {
+        grid-template-columns: 33.333% 33.333% 33.334%;
     }
 }
 
